# Copyright (c) 2025 Felix Kahle.
#
# Permission is hereby granted, free of charge, to any person obtaining
# a copy of this software and associated documentation files (the
# "Software"), to deal in the Software without restriction, including
# without limitation the rights to use, copy, modify, merge, publish,
# distribute, sublicense, and/or sell copies of the Software, and to
# permit persons to whom the Software is furnished to do so, subject to
# the following conditions:
#
# The above copyright notice and this permission notice shall be
# included in all copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
# EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
# MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
# NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE
# LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION
# OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION
# WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.

load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")

cc_library(
    name = "search_stack",
    hdrs = [
        "search_stack.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//leviathan/base:config",
        "@abseil-cpp//absl/log:check",
    ],
)

cc_test(
    name = "search_stack_test",
    srcs = ["search_stack_test.cpp"],
    deps = [
        ":search_stack",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "search_trail",
    hdrs = [
        "search_trail.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//leviathan/base:config",
        "@abseil-cpp//absl/log:check",
    ],
)

cc_test(
    name = "search_trail_test",
    srcs = ["search_trail_test.cpp"],
    deps = [
        ":search_trail",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "berth_timeline",
    hdrs = [
        "berth_timeline.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//leviathan/base:config",
        "@abseil-cpp//absl/log:check",
    ],
)

cc_test(
    name = "berth_timeline_test",
    srcs = ["berth_timeline_test.cpp"],
    deps = [
        ":berth_timeline",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "search_state",
    hdrs = [
        "search_state.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//leviathan/base:config",
        "@abseil-cpp//absl/log:check",
    ],
)

cc_test(
    name = "search_state_test",
    srcs = ["search_state_test.cpp"],
    deps = [
        ":search_state",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)
